syntax = "proto3";

package authGrpc;
option go_package = "./pb";

service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}

// Register

message RegisterRequest {
  string username = 1;
  string role = 2;
  string password = 3;
}

message RegisterResponse {
  uint32 id = 1;
  string username = 2;
  string role = 3;
}

// Login

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Validate

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  uint32 userId = 1;
  string username = 2;
}
